# rcj-notification-bot

./: .gitignore  README.md  channels.json  dot_env.py  index.ts  main.py  maubot.service  package-lock.json  package.json  setup.md  signal.service  whatsapp.service
admin-dashboard/: bot-manager-api.js  index.html  load-data.js  main.js  style.css  sync-input-values.js
bot-manager/: create_channels.js  index.js  message-history.js  package-lock.json  package.json  routes.js
bot-manager/utils/: channels.js  file-helper.js  middleware.js  request.js
bots/: bot-manager.ts  bot_manager.py  channels.ts  messenger-bot.ts  messenger_bot.py
bots/matrix/: build.sh  maubot.yaml  rcj.py
bots/matrix-rs/: .gitignore  Cargo.toml  example-matrix-bot.json  example-query.sh
bots/matrix-rs/src/: main.rs
bots/telegram/: .gitignore  README.md  admin-commands.ts  admin_handlers.py  bot-middleware.ts  chat-data-persistence.ts  chat_persistence.py  i18n.ts  index.ts  inline-keyboard.ts  package-lock.json  package.json  routes.ts  telegram-bot.ts  telegram_bot.py  tsconfig.json
docs/: api.md  bot-architecture.drawio
notification-manager/: index.js  package-lock.json  package.json  routes.js
utils/js/: config.js
