[package]
name = "rcj-notification-bot"
version = "0.1.0"
authors = ["Manuel Bucher <dev@manuelbucher.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1   # Reduce number of codegen units to increase optimizations.

[dependencies]
structopt = "0.3"
#matrix-sdk = "0.1.0"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1.1"
xdg = "^2.1"
tokio = { version = "0.2.22", features = ["full"] }
async-trait = "0.1"
warp = "0.2"

[dependencies.ruma]
version = "0.0.1"
git = "https://github.com/ruma/ruma"
rev = "3869d75837b7aab60eef58fc834e498317d1e4a4"
features = ["client-api", "unstable-pre-spec", "unstable-exhaustive-types"]
